# Orichalcum

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  LICENSE  README.md  TODO.md  dockerfile
docs/: language.md
scripts/: docker_build.sh  linux_cross_build.ps1  make_lib.py
src/: main.cpp
src/lib/: Chunk.cpp  Chunk.hpp  Compiler.cpp  Compiler.hpp  Debug.cpp  Debug.hpp  Error.cpp  Error.hpp  ExprAST.cpp  ExprAST.hpp  Lexer.cpp  Lexer.hpp  Log.cpp  Log.hpp  Misc.cpp  Misc.hpp  OrObject.cpp  OrObject.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  VM.cpp  VM.hpp  _compiler.cpp  _compiler.hpp  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  data_structures.cpp  data_structures.hpp  debug.cpp  debug.hpp
src/lib/data_structures/: BigInt.cpp  BigInt.hpp
test/: main.cpp  test-BigInt.hpp  test-data_structures.hpp  test.or
tests/: test-BigInt.hpp  test.or  tests.cpp
