load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

alias(
	name = "main",
	actual = ":Orichalcum"
)

cc_binary(
	name = "Orichalcum",
	srcs = ["src/main.cpp"],
	deps = [
		":lib",
	],
	linkstatic=True,
)

cc_binary(
	name = "DLL",
	linkshared = True,
	linkstatic = True,
	deps = [
		":lib"
	],
)

cc_library(
	name = "lib",
	hdrs = glob(["src/lib/**/*.hpp"]),
	srcs = glob(["src/lib/**/*.cpp"]),
	deps = [
		":rang",
		":cxxopts",
	],
)

cc_binary(
	name = "tests",
	srcs = ["tests/tests.cpp"],
	deps = [
		":test-lib",
	],
)

cc_library(
	name = "test-lib",
	hdrs = glob(["tests/*.hpp"]),
	deps = [
		":lib",
	],
)

######################
# External Libraries #
######################
cc_library(
	name = "rang",
	hdrs = ["include/rang.hpp"],
	strip_include_prefix = "include",
)

cc_library(
	name = "cxxopts",
	hdrs = ["include/cxxopts.hpp"],
	strip_include_prefix = "include",
)
